After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756893 - video: Missing closing parenthesis in video overlay composition cast macros
video: Missing closing parenthesis in video overlay composition cast macros
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal minor
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-21 03:21 UTC by Pavel Bludov
Modified: 2015-10-22 08:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Missing closing parenthesis patch (995 bytes, patch)
2015-10-22 04:11 UTC, Pavel Bludov
committed Details | Review

Description Pavel Bludov 2015-10-21 03:21:24 UTC
index 394d77d..ac787ea 100644
--- a/video-overlay-composition.h.orig
+++ b/video-overlay-composition.h
@@ -36,7 +36,7 @@ G_BEGIN_DECLS
 #define GST_TYPE_VIDEO_OVERLAY_RECTANGLE                       \
   (gst_video_overlay_rectangle_get_type ())
 #define GST_VIDEO_OVERLAY_RECTANGLE_CAST(obj)                  \
-  ((GstVideoOverlayRectangle *)(obj)
+  ((GstVideoOverlayRectangle *)(obj))
 #define GST_VIDEO_OVERLAY_RECTANGLE(obj)                       \
   (GST_VIDEO_OVERLAY_RECTANGLE_CAST(obj))
 #define GST_IS_VIDEO_OVERLAY_RECTANGLE(obj)                    \
Comment 1 Tim-Philipp Müller 2015-10-21 08:31:14 UTC
Thanks, could you provide a patch in git format-patch format please?
Comment 2 Pavel Bludov 2015-10-22 04:11:17 UTC
Created attachment 313835 [details] [review]
Missing closing parenthesis patch
Comment 3 Tim-Philipp Müller 2015-10-22 08:33:00 UTC
Thanks, pushed (including fix for same issue with the OVERLAY_COMPOSITION_CAST macro).

commit 8051434c03bc98104f20789deb59884008e25946
Author: Pavel Bludov <pbludov@gmail.com>
Date:   Thu Oct 22 12:07:44 2015 +0800

    video: overlay-composition: fix rectangle and composition cast macros
    
    Closing parenthesis was missing in two cases.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756893