video: overlay-composition: fix rectangle and composition cast macros

Closing parenthesis was missing in two cases.

https://bugzilla.gnome.org/show_bug.cgi?id=756893